
=item *

Having a custom field beginning with a leading underscore was causing
an error in comp/widgets/wrappers/sharky/header.mc. [Scott]

=item *

Errors thrown when setting element field values will not be displayed as error
messages within the context of the element profile, rather than throwing a
fatal exception. This is useful for invalid dates, foe example. [David]

=back

=cut

##############################################################################

=head1 VERSION 1.8.6 (2005-07-19)

=head2 Improvements

=over 4

=item *

Added JavaScript code to validate that the username in the user profile does
not have leading or trailing spaces. [David]

=item *

When started by the super user, F<bric_queued> now runs as the same user as
the Bricolage Apache server. This allows it to run as a user that isn't
otherwise available as a login on the system (such as the typical "nobody" or
"www" user). [David]

=item *

Added support for starting F<bric_queued> in the Linux startup script in
F<contrib/start_scripts/>. [David]

=item *

The C<get_related_story()> and get_related_media() methods of the element
class now return C<undef> in a list context when there is no related asset.
[David]

=item *

Events in the event log are now returned (and displayed) in reverse
chronological order. [David]

=item *

The SOAP server now uses a user's template sandbox when executing previews
(such as with C<bric_soap --to-preview workflow publish>). Reported by
Marshall. [David]

=item *

A job no longer throws an exception when it can't get a lock on itself for
execution. This is because the inability to get a lock may well be due to a
race condition with another process. There's no need to throw an exception
when it can't get a lock because another process has a lock. So it generates a
warning, instead. Reported by Bill Cappell. [David]

=item *

Bric::Biz::Workflow now caches calls to C<allowed_desks()>. This will allow